--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
     <div>
         <video class="video" controls="controls" preload="metadata">
-            <source src="https://people.eecs.berkeley.edu/~vmyers/GRIF.mp4#t=0.1" type="video/mp4">
+            <source src="https://people.eecs.berkeley.edu/~vmyers/grif/GRIF.mp4#t=0.1" type="video/mp4">
             Paper summary.
         </video>
     </div>
