--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>GRIF</title>
     <meta name="description" content="GRIF">
-    <link rel="canonical" href="https://people.eecs.berkeley.edu/~vmyers/grif">
+    <link rel="canonical" href="https://rail-berkeley.github.io/grif/">
 
     <meta property="og:title" content="Goal Representations for Instruction Following">
     <meta property="og:image" content="frontfig.png">
@@ -16,8 +16,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -98,7 +98,7 @@
                 <a href="paper.pdf" target="_blank" class="mx-2 px-2">
                     <i class="fas fa-file-pdf" alt="paper logo"></i> Paper
                 </a>
-                <a href="https://anonymous.4open.science/r/jaxrl_minimal-CCBF" target="_blank" class="mx-2 px-2">
+                <a href="https://github.com/rail-berkeley/grif_release" target="_blank" class="mx-2 px-2">
                     <i class="fas fa-code" alt="code logo"></i> Code
                 </a>
             </div>
